^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #9489: Check whether the PersistentObject and
  PersistentObjectDatabaseSchemaTiein tutorials are interlinked.
- Fixed issue #9493: Convert < and > in exception messages to ' and ' for
  Cache, ConsoleTools, ImageAnalysis, ImageConversion, PersistentObject,
  PersistentObjectDatabaseSchemaTiein.


1.2beta2 - Monday 20 November 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #8962: "Sequence Generator" incorrect name for MySQL. MySQL
  should use the new "ezcPersistentNativeGenerator" from now, with
  auto_increment. "ezcPersistentSequenceGenerator" dispatches to this for BC
  reasons.
- Fixed issue #9248: SQLite driver throws wierd exception.
- Fixed issue #9335: PersistentSession should use object->getState() in all
  methods rather than accessing objects properties directly.


1.2beta1 - Tuesday 24 October 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed bug #8340: Column names are not escaped.
- Fixed bug #8489: Show the absolute path in the "cannot find definition file"
  exception message.
- Fixed bug #8511: @access private for the 'id generator' classes.
- Fixed bug #8663: Undeclared property "type" used instead of "propertyType"
  in ezcPersistentObjectProperty.  This property is not used until now. And
  causes no change in the usage of the system.
- Fixed bug #9059: Incorrect prototype of ezcPersistentSession->__construct().
- Fixed bug #9187: ezcPersistentObjectDefition->__construct() has orphan
  parameters.
- Fixed bug #9189: ezcPersistentObjectProperty->__set_state() does not work
  correcty.
- Implemented suggestion #8526: Allow retrieving of the database handler and
  definition manager through the database and definitionManager properties of
  the ezcPersistentObjectSession class to help with transaction support.